--- a/.github/workflows/update-badges.yml
+++ b/.github/workflows/update-badges.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Badges - Readme
         uses: pemtajo/badge-readme@main
         with:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           CREDLY_USER: leticia-tavares-da-silva
           BADGE_SIZE: 100
           NUMBER_LAST_BADGES: 24
