--- a/.github/workflows/update-badges.yml
+++ b/.github/workflows/update-badges.yml
@@ -21,6 +21,6 @@ jobs:
         uses: pemtajo/badge-readme@main
         with:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          CREDLY_USER: leticia-tavares-da-silva
+          CREDLY_USER: leticiatavaresds
           BADGE_SIZE: 100
           NUMBER_LAST_BADGES: 24
