--- a/.github/workflows/update-badges.yml
+++ b/.github/workflows/update-badges.yml
@@ -2,16 +2,9 @@ name: Update badges
 
 on:
   schedule:
-    # Runs at 2am UTC
+    # Runs at 02:00 UTC every day
     - cron: "0 2 * * *"
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
-      tags:
-        description: 'Test scenario tags' 
+
 jobs:
   update-readme:
     name: Update Readme with badges
@@ -20,6 +13,7 @@ jobs:
       - name: Badges - Readme
         uses: pemtajo/badge-readme@main
         with:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          BADGE_SIZE: 100
-          NUMBER_LAST_BADGES: 24
+          # Optional, 110x110 default
+          BADGE_SIZE: 96
+          # Optional, but default will use the same from GitHub
+          CREDLY_USER: alexandre-teyar 
